--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="header-menu">
                 <a href="#" class="logo-top-link" >
                     <div class="logo-top">
-                        <img src="img/logoBlack.png" alt="">
+                        <img src="img/logoBlack.png" alt="main img">
                     </div>
                 </a>
                 <div class="header-menu-right">
