--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="script.js"></script>
 </head>
@@ -75,7 +76,7 @@
                         </div>
                     </div>
                     <div class="header-tittle-text-main">
-                        <div class="header-tittle-text-main__header">
+                        <div class="header-tittle-text-main__header animate__animated animate__backInLeft">
                             DON'T WAIT!
                         </div>
                         <div class="header-tittle-text-main__discription">
