add file wow and animationed form order title BOOK YOUR TABLE

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                 <div class="main-form-form__subtittle">
                     RESERVATION
                 </div>
-                <div class="main-form-form__tittle">
+                <div class="main-form-form__tittle animate__slideOutUp animate__animated wow">
                     BOOK YOUR TABLE
                 </div>
                 <div class="main-form-form-block">
@@ -347,5 +347,9 @@
         </div>
     </footer>
     <script src="script.js"></script>
+    <script src="wow.min.js"></script>
+    <script>
+        new WOW().init();
+        </script>
 </body>
 </html>
