--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
     <div class="main container">
         <div class="main-order">
             <div class="main-order__top">
-                <div class="main-order__title">CHOOSE & ENJOY</div>
+                <div class="main-order__title wow animate__animated animate__wobble">
+                    CHOOSE & ENJOY
+                </div>
             <div class="main-order__text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi quisquam vel similique natus voluptatem magnam labore alias dolore doloribus nulla.
             </div>
@@ -140,7 +142,7 @@
 
         <div class="main-order-goods">
             <div class="main-order-goods__item">
-                <div class="main-order-goods__img">
+                <div class="main-order-goods__img wow animate__animated animate__heartBeat">
                     <img src="img/Place Your Image Here (Double Click to Edit) (1).png" alt="">
                 </div>
                 <div class="main-order-goods__header">
@@ -156,7 +158,7 @@
                 </a>
             </div>
             <div class="main-order-goods__item">
-                <div class="main-order-goods__img">
+                <div data-wow-delay="2.5s" class="main-order-goods__img wow animate__animated animate__heartBeat">
                     <img src="img/Bread.png" alt="">
                 </div>
                 <div class="main-order-goods__header">
@@ -172,7 +174,7 @@
                 </div>
             </div>
             <div class="main-order-goods__item">
-                <div class="main-order-goods__img">
+                <div data-wow-delay="1.2s" class="main-order-goods__img wow animate__animated animate__heartBeat">
                     <img src="img/Place Your Image Here (Double Click to Edit) (2).png" alt="">
                 </div>
                 <div class="main-order-goods__header">
